--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,8 @@
 </head>
 <body>
   <nav>
+    <a href="/contacts">Your Contacts</a>
+
     <% if (user) { %>
       <a href="/auth/logout">
         <button type="submit">Logout</button>
