--- a/views/contacts/new.ejs
+++ b/views/contacts/new.ejs
@@ -27,7 +27,10 @@
         <option value="">ejs of instruments</option>
 
       </select> -->
-      
+     
+      <label>Location:
+        <input type="text" name="location">
+      </label>  
     </label>
     <label>
       Willing to Travel?
