--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,9 @@
 </head>
 <body>
   <nav>
-    <a href="/contacts">Your Contacts</a>
+    <!-- <h1>Hello  </h1> -->
+
+    <a href="/contacts"><button>Your Contacts</button></a>
 
     <% if (user) { %>
       <a href="/auth/logout">
