--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background-color: gray;
+  background-color: rgba(44, 63, 67, 0.762);
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -25,7 +25,7 @@ body {
 }
 
 nav {
-  background-color: white;
+  background-color: rgb(125, 85, 244);
   font-size: 1.6rem;
   display: flex;
   justify-content: center;
