--- a/views/contacts/new.ejs
+++ b/views/contacts/new.ejs
@@ -10,7 +10,7 @@
   <% if (user) { %>
    
   
-  <form action="/contacts" method="POST">
+  <form action="/contacts" method="POST" autocomplete="off">
     <label>Name:
       <input type="text" name="name">
     </label>
