--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -4,13 +4,13 @@
 
 <main>
   <h1>My Contacts</h1>
-  <a href="/contacts/new"><button>Add New Contact</button></a>
+  <a href="/contacts/new"><button class="btn btn-primary">Add New Contact</button></a>
   
 <% contacts.forEach(contact => { %>
   <div class="card">
-    <h5 class="card-header"><%= contact.name %></h5>
+    <h2 class="card-header"><%= contact.name %></h2>
     <div class="card-body">
-      <h5 class="card-title">Instrument Placeholder</h5>
+      <h2 class="card-title">Instrument Placeholder</h2>
       <p class="card-text">
         
       </p>
