--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,6 +7,7 @@
     <!-- <h1>Hello  </h1> -->
 
     <a href="/contacts"><button>Your Contacts</button></a>
+    <a href="/instruments/new"><button>Instruments</button></a>
 
     <% if (user) { %>
       <a href="/auth/logout">
