--- a/views/contacts/new.ejs
+++ b/views/contacts/new.ejs
@@ -37,6 +37,17 @@
 
       </select> -->
   <divclass="mb-3">
+    <label class="form-label">Instruement:
+      <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+        <option selected>Open this select menu</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </label>
+  </div>
+  <br>   
+  <divclass="mb-3">
     <label class="form-label">Instrument:
       <input type="text" name="" class="form-control">
     </label>
