instrument model works and full crud

--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -10,7 +10,7 @@
   <div class="card">
     <h2 class="card-header"><%= contact.name %></h2>
     <div class="card-body">
-      <h2 class="card-title">Instrument Placeholder</h2>
+      <h2 class="card-title"><%= contact.instrument %> </h2>
       <p class="card-text">
         
       </p>
