--- a/views/contacts/show.ejs
+++ b/views/contacts/show.ejs
@@ -9,7 +9,7 @@
     <div class="card" style="width: 30rem;">
       <div class="card-body">
         <h1 class="card-title"><%= contact.name %></h5>
-        <h2 class="card-subtitle mb-2 text-muted">Instrument Placeholder</h6>
+        <h2 class="card-subtitle mb-2 text-muted"> <%= contact.instrument %>  </h6>
         <p class="card-text">
           Email Address: <%= contact.email %> <br>
           Phone Number: <%= contact.phoneNum %> <br>
