--- a/views/contacts/edit.ejs
+++ b/views/contacts/edit.ejs
@@ -31,12 +31,13 @@
   <br>
 
   <divclass="mb-3">
-    <label class="form-label">Instruement:
-      <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-        <option selected>Instrument Placeholder</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+    <label class="form-label">Instrument:
+      <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" name="instrument">
+        <option selected>Instrument</option>
+        <% instruments.forEach(instrument => { %>
+          <option value="<%= instrument.name %>"> <%= instrument.name %>  </option>
+        <% }) %>
+     
       </select>
     </label>
   </div>
