--- a/views/contacts/new.ejs
+++ b/views/contacts/new.ejs
@@ -1,5 +1,6 @@
 
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/contacts/new.css">
 <%- include('../partials/nav') %>
 
 
@@ -23,13 +24,13 @@
     </label>
   </div>
   <br>
-  <divclass="mb-3">
+  <div class="mb-3">
     <label class="form-label">Phone Number:
       <input type="text" name="phoneNum" class="form-control">
     </label>
   </div>
   <br>
-  <divclass="mb-3">
+  <div class="mb-3">
     <label class="form-label">Instrument:
       <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" name="instrument">
         <option selected>Instrument</option>
@@ -41,19 +42,19 @@
     </label>
   </div>
   <br>
-  <divclass="mb-3">
+  <div class="mb-3">
     <label class="form-label">Location:
       <input type="text" name="location" class="form-control">
     </label>
   </div>
   <br>   
-  <divclass="mb-3">
+  <div class="mb-3">
     <label class="form-check-label">Willing to Travel:
       <input type="checkbox" name="willingToTravel" class="form-check-input">
     </label>
   </div>
   <br>
-  <divclass="mb-3">
+  <div class="mb-3">
     <label class="form-check-label">Teaches:
       <input type="checkbox" name="teaches" class="form-check-input">
     </label>
