--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,12 +6,12 @@
   <nav>
     <!-- <h1>Hello  </h1> -->
 
-    <a href="/contacts"><button>Your Contacts</button></a>
-    <a href="/instruments/new"><button>Instruments</button></a>
+    <a href="/contacts"><button type="button" class="btn btn-primary btn-lg">Your Contacts</button></a>
+    <a href="/instruments/new"><button type="button" class="btn btn-primary btn-lg">Instruments</button></a>
 
     <% if (user) { %>
       <a href="/auth/logout">
-        <button type="submit">Logout</button>
+        <button type="submit"  class="btn btn-danger btn-lg">Logout</button>
       </a>
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
