--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background-color: rgba(44, 63, 67, 0.762);
+  background-color: rgba(85, 82, 52, 0.762);
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -25,10 +25,16 @@ body {
 }
 
 nav {
-  background-color: rgb(125, 85, 244);
-  font-size: 1.6rem;
+  background-color: rgb(0, 0, 0);
+  font-size: 3rem;
   display: flex;
   justify-content: center;
+  height: 75px;
+  vertical-align: center;
+}
+
+nav > a {
+  font-size: 30px;
 }
 
 main {
@@ -56,6 +62,7 @@ h1 {
   display: flex;
   flex-direction: row;
   margin: 0 auto;
+  
 }
 
 .btn-danger {
