fix broken code

--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
-<form
+<!-- <form
   action="/contacts"
   method="GET"
   class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3"
@@ -13,7 +13,7 @@
     placeholder="Search name..."
     value=" <%= contacts.name %> "
     autocomplete="off"
-  />
+  /> -->
 <main>
   <h1>My Contacts</h1>
   <a href="/contacts/new"><button class="btn btn-primary">Add New Contact</button></a>
