--- a/views/contacts/show.ejs
+++ b/views/contacts/show.ejs
@@ -41,9 +41,10 @@
           <p>
               <%= note.content %>
               <form action="/contacts/<%= contact._id %>/notes/<%= note.id %>?_method=DELETE" method="POST" style="display: inline-block;">
-              
               <button type="submit">X</button>
-              
+              </form>
+              <form action="/contacts/<%= contact._id %>/notes/<%= note._id %>" method="GET">
+              <button type="submit">Edit Note</button>
               </form>
           </p>
           <% }) %>
