editNote function passes only one

--- a/views/contacts/edit-note.ejs
+++ b/views/contacts/edit-note.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<% contact.notes.forEach(note => { %>
- <h1><%= note %> </h1>
-<% }) %>
+
+ <h1><%= note.content %> </h1>
+
 
 <%- include('../partials/footer') %>
