--- a/views/instruments/new.ejs
+++ b/views/instruments/new.ejs
@@ -18,9 +18,8 @@
   
   <div class="card" style="width: 18rem;">
     <ul class="list-group list-group-flush">
-      <li class="list-group-item"> <%= instrument.name %> 
-      <form action="/instrument/<%= instrument._id%>?_method=DELETE" method="GET" ><button type="submit">X</button></form>
-      </li> 
+      <li class="list-group-item"> <%= instrument.name %></li>
+      <form action="/instruments/<%= instrument._id %>?_method=DELETE" method="POST" ><button type="submit">X</button></form> 
     </ul>
   </div>
   <% }) %>
