--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
+  <h1>Welcome to The Musicians Rolodex</h1>
+  <h2>Please Sign In to Get Started</h2>
   <% if (user?.profile.avatar) { %>
     <div>
       <img
