--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -8,4 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Courgette&family=Fredoka+One&family=Knewave&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css" />
+
+    <link 
+    id="favicon" 
+    rel="icon"
+    href="/assets/favicon.webp"
+    type="image/png" 
+    sizes="32x32"
+    >
     <title><%= title %></title>
