--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,8 +7,8 @@
     <!-- <h1>Hello  </h1> -->
     <% if (user) { %>
      
-      <a href="/contacts"><button type="button" class="btn btn-primary btn-lg">Your Contacts</button></a>
-      <a href="/instruments/new"><button type="button" class="btn btn-primary btn-lg">Instruments</button></a>
+      <a href="/contacts"><button type="button" id="contacts-btn" class="btn btn-primary btn-lg nav-btn">Your Contacts <i class="fa-solid fa-address-card"></i></button></a>
+      <a href="/instruments/new"><button type="button" class="btn btn-primary btn-lg nav-btn">Instruments <i class="fa-solid fa-guitar"></i></button></a>
     <% } %>
     
     <% if (user) { %>
