more styling and readme

--- a/views/contacts/edit.ejs
+++ b/views/contacts/edit.ejs
@@ -1,5 +1,6 @@
 
 <%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/contacts/new.css">
 <%- include('../partials/nav') %>
 
 
