--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -3,7 +3,9 @@
 <%- include('../partials/nav') %>
 
 <main>
+  <div id="title-div">
   <h1>My Contacts</h1>
+  </div>
 
   <a href="/contacts/new"><button class="btn btn-primary">Add New Contact  <i class="fa-solid fa-square-plus"></i></button></a>
   
