--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background-color: rgba(85, 82, 52, 0.762);
+  background-color: rgba(39, 40, 36, 0.755);
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -25,7 +25,7 @@ body {
 }
 
 nav {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(12, 4, 24, 0.851);
   font-size: 3rem;
   display: flex;
   justify-content: center;
@@ -46,8 +46,8 @@ main {
 
 h1 {
   font-size: 3.6rem;
-  background-color: rgb(247, 247, 247);
- 
+  background-color: rgba(211, 211, 211, 0.42);
+  font-family: 'Courgette', cursive;
   padding: 20px;
 }
 
@@ -56,6 +56,7 @@ h1 {
   margin: 10px auto;
   min-width: 500px;
   max-width: 70%;
+  background-color: rgb(211, 211, 211);
 }
 
 #button-div {
