--- a/views/contacts/edit-note.ejs
+++ b/views/contacts/edit-note.ejs
@@ -5,13 +5,11 @@
   <div>
     <form action="/contacts/<%= contact.id %>/notes/<%= note._id %>?_method=PUT" method="POST">
       <input type="text" value="<%= note.content %>" name="content">
-      <button type="submit">Update Note</button>
+      <button class="btn btn-primary">Update<i class="fa-solid fa-pen-to-square"></i></button>
     </form>
   </div>
-
-
 </main>
- <h1><%= note.content %> </h1>
+
 
 
 <%- include('../partials/footer') %>
