--- a/views/instruments/new.ejs
+++ b/views/instruments/new.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/html-head') %>
-
+<link rel="stylesheet" href="/stylesheets/contacts/new.css">
 <%- include('../partials/nav') %>
 
 
@@ -11,7 +11,7 @@
       </label>
   </div>
   <br>
-    <button type="submit">Add New Instrument</button>
+    <button type="submit" class="btn btn-primary">Add New Instrument</button>
   </form>
 
   <% instruments.forEach(instrument => { %>
@@ -21,7 +21,7 @@
     <ul class="list-group list-group-flush">
       <li class="list-group-item"> <%= instrument.name %></li>
       <% if (instrument.creator.equals(user?.profile._id)) { %>
-        <form action="/instruments/<%= instrument._id %>?_method=DELETE" method="POST" ><button type="submit">X</button></form> 
+        <form action="/instruments/<%= instrument._id %>?_method=DELETE" method="POST" ><button type="submit" class="btn btn-danger">X</button></form> 
        
       <% } %>
     </ul>
